[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-feature-flags"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dev-dependencies]
tempfile.workspace   = true

[dependencies]
anyhow.workspace = true
bd-resilient-kv = { path = "../bd-resilient-kv" }
bd-bonjson = { path = "../bd-bonjson" }
time = { workspace = true, features = ["macros", "formatting"] }
