[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-feature-flags"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dev-dependencies]
tempfile.workspace = true

[dependencies]
ahash.workspace             = true
anyhow.workspace            = true
bd-bonjson                  = { path = "../bd-bonjson" }
bd-client-common            = { path = "../bd-client-common" }
bd-resilient-kv             = { path = "../bd-resilient-kv" }
bd-workspace-hack.workspace = true
log.workspace               = true
time.workspace              = true
