[package]
edition      = "2021"
license-file = "../LICENSE"
name         = "bd-filters"
publish      = false
version      = "1.0.0"

[dependencies]
anyhow.workspace            = true
bd-matcher.path             = "../bd-matcher"
bd-proto.path               = "../bd-proto"
time.workspace              = true

[dev-dependencies]
assert_matches.workspace = true
bd-test-helpers.path     = "../bd-test-helpers"
bd-time.path             = "../bd-time"
ctor.workspace           = true
