[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-grpc-codec"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace      = true
bd-client-common.path = "../bd-client-common"
bd-stats-common.path  = "../bd-stats-common"
bytes.workspace       = true
flate2                = { workspace = true, default-features = false }
log.workspace         = true
protobuf.workspace    = true
thiserror.workspace   = true

[dev-dependencies]
bd-test-helpers  = { path = "../bd-test-helpers" } # revert
ctor.workspace   = true
rstest.workspace = true

[features]
# zlib feature allows us to link against system provided zlib implementation. Desirable on mobile platforms.
default = ["zlib"]
zlib    = ["flate2/zlib"]
zlib-ng = ["flate2/zlib-ng"]
