[package]
edition      = "2021"
license-file = "../LICENSE"
name         = "bd-hyper-network"
publish      = false
version      = "1.0.0"

[dependencies]
anyhow.workspace         = true
async-trait.workspace    = true
bd-api                   = { path = "../bd-api" }
bd-client-common         = { path = "../bd-client-common" }
bd-shutdown              = { path = "../bd-shutdown" }
bytes.workspace          = true
http-body-util.workspace = true
http-body.workspace      = true
http.workspace           = true
hyper-rustls.workspace   = true
hyper-util.workspace     = true
hyper.workspace          = true
log.workspace            = true
tokio-stream.workspace   = true
tokio.workspace          = true

[dev-dependencies]
assert_matches.workspace = true
