[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-hyper-network"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace            = true
async-trait.workspace       = true
bd-api                      = { path = "../bd-api" }
bd-client-common            = { path = "../bd-client-common" }
bd-error-reporter           = { path = "../bd-error-reporter" }
bd-shutdown                 = { path = "../bd-shutdown" }
bd-workspace-hack.workspace = true
bytes.workspace             = true
http.workspace              = true
http-body.workspace         = true
http-body-util.workspace    = true
hyper.workspace             = true
hyper-rustls.workspace      = true
hyper-util.workspace        = true
log.workspace               = true
serde.workspace             = true
serde_json.workspace        = true
tokio.workspace             = true
tokio-stream.workspace      = true

[dev-dependencies]
assert_matches.workspace = true
axum.workspace           = true
bd-test-helpers          = { path = "../bd-test-helpers", default-features = false }
ctor.workspace           = true
