[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-internal-logging"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
bd-log-primitives.path      = "../bd-log-primitives"
bd-proto.path               = "../bd-proto"
bd-workspace-hack.workspace = true
tokio.workspace             = true
