[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-key-value"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace            = true
base64.workspace            = true
bd-bonjson.path             = "../bd-bonjson"
bd-log.path                 = "../bd-log"
bd-resilient-kv.path        = "../bd-resilient-kv"
bd-workspace-hack.workspace = true
log.workspace               = true
parking_lot.workspace       = true
protobuf.workspace          = true
serde.workspace             = true
time.workspace              = true
tokio.workspace             = true

[dev-dependencies]
bd-test-helpers             = { path = "../bd-test-helpers", default-features = false }
bincode.workspace           = true
ctor.workspace              = true
parking_lot.workspace       = true
pretty_assertions.workspace = true
