[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-log-filter"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace           = true
bd-client-stats-store.path = "../bd-client-stats-store"
bd-log-matcher.path        = "../bd-log-matcher"
bd-log-primitives.path     = "../bd-log-primitives"
bd-proto.path              = "../bd-proto"
itertools.workspace        = true
log.workspace              = true
regex.workspace            = true
time.workspace             = true

[dev-dependencies]
assert_matches.workspace    = true
bd-test-helpers.path        = "../bd-test-helpers"
bd-time.path                = "../bd-time"
ctor.workspace              = true
pretty_assertions.workspace = true
