[package]
edition      = "2021"
license-file = "../LICENSE"
name         = "bd-log-matcher"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace       = true
bd-log-primitives.path = "../bd-log-primitives"
bd-matcher.path        = "../bd-matcher"
bd-proto.path          = "../bd-proto"
itertools.workspace    = true
protobuf.workspace     = true
regex.workspace        = true


[dev-dependencies]
assert_matches.workspace    = true
bd-test-helpers.path        = "../bd-test-helpers"
matches.workspace           = true
pretty_assertions.workspace = true
time.workspace              = true
