[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-log-matcher"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace            = true
bd-log-primitives.path      = "../bd-log-primitives"
bd-proto.path               = "../bd-proto"
bd-feature-flags.path      = "../bd-feature-flags"
bd-workspace-hack.workspace = true
itertools.workspace         = true
protobuf.workspace          = true
regex.workspace             = true
tempfile.workspace              = true


[dev-dependencies]
assert_matches.workspace    = true
bd-test-helpers.path        = "../bd-test-helpers"
matches.workspace           = true
pretty_assertions.workspace = true
time.workspace              = true
