[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-log-metadata"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace            = true
bd-log-primitives.path      = "../bd-log-primitives"
bd-workspace-hack.workspace = true
time.workspace              = true
