[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-log-primitives"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
ahash.workspace             = true
anyhow.workspace            = true
bd-proto                    = { path = "../bd-proto" }
bd-workspace-hack.workspace = true
protobuf.workspace          = true
serde.workspace             = true
time.workspace              = true
