[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-log-primitives"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
ahash.workspace             = true
anyhow.workspace            = true
bd-macros                   = { path = "../bd-macros" }
bd-proto                    = { path = "../bd-proto" }
bd-time                     = { path = "../bd-time" }
bd-proto-util               = { path = "../bd-proto-util" }
bd-workspace-hack.workspace = true
flate2                      = { workspace = true, default-features = false, features = ["zlib"] }
ordered-float.workspace     = true
protobuf.workspace          = true
time.workspace              = true
