[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-log"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace             = true
log.workspace                = true
parking_lot.workspace        = true
time.workspace               = true
tokio.workspace              = true
tracing.workspace            = true
tracing-error.workspace      = true
tracing-log.workspace        = true
tracing-subscriber.workspace = true

[dev-dependencies]
bd-time = { path = "../bd-time" }
